--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: CI - Build and Push Docker Image
+name: CI/CD - Build, Push Docker Image & Deploy to Kubernetes
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,3 +21,24 @@ jobs:
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/hello:latest
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.12.0 # change to your desired version
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.27.0 # change to your desired version
+
+      - name: Deploy to Kubernetes with Helm
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }} # store kubeconfig in GitHub Secrets
+        run: |
+          helm repo update
+          helm uninstall hello --namespace default || true
+          helm upgrade --install hello ./helloworld \
+            --set image.repository=${{ secrets.DOCKER_USERNAME }}/hello \
+            --set image.tag=latest \
+            --namespace default
