--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Build, Push Docker Image & Deploy to Kubernetes
+name: CI - Build and Push Docker Image
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted   # 👈 runs on your VM, not GitHub cloud runner
+  build:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -21,17 +21,3 @@ jobs:
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/hello:latest
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.12.0
-
-      - name: Deploy to Kubernetes with Helm
-        run: |
-          export KUBECONFIG=/data/kube/config   # 👈 using same kubeconfig as Jenkins
-          helm uninstall hello --namespace default || true
-          helm install hello ./helloworld \
-            --set image.repository=${{ secrets.DOCKER_USERNAME }}/hello \
-            --set image.tag=latest \
-            --namespace default
